Made a bug fix
made a layout bug fix in select box of footer section

--- a/style.css
+++ b/style.css
@@ -596,7 +596,8 @@ footer .main-points-section .main-col .city-name span:hover{
     border:medium none;
     background: transparent;
     font-family: var(--main-font);
-    font-weight:500
+    font-weight:500;
+    appearance: none;
 }
 .copyright-section .country-input .arrow-down{
     position:absolute;
